[package]
name = "page2doc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.1"
dotenv = "0.15.0"
serde = { version = "1.0.188", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4"] }
